fix profile image squashed issue + fix edit profile page scroll issue

--- a/scss/ryan/_follow-toggle-user-list.scss
+++ b/scss/ryan/_follow-toggle-user-list.scss
@@ -34,13 +34,10 @@
         content: "UNFOLLOW";
       }
       .profile-image{
-        max-width: 30px;
-        max-height: 30px;
-        left: 10px;
-        top: 13px;
+        float: left;
+        margin: 10px;
       }
       padding: 4px;
-      padding-left: 50px;
       min-height: 55px;
     }
 
